# lab-c-programing

./: 10th.c  11th.c  12th.c  13th.c  14th.c  15th.c  16th.c  17th.c  18th.c  19th.c  1st.c  20th.c  21th.c  22th.c  23th.c  24th.c  25th.c  26th.c  27th.c  28.c  29th.c  2nd.c  30th.c  31th.c  32th.c  33th.c  34th.c  35th.c  36th.c  37th.c  38th.c  39th.c  3rd.c  40th.c  41th.c  42th.c  43th.c  44th.c  45th.c  46th.c  (+17 more)
