cmake_minimum_required(VERSION 3.26)
project(lab_c_programing)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable( 1ST 1st.c)
add_executable( 3RD 3rd.c)
add_executable( 4TH 4th.c)
add_executable( 5TH 5th.c)
add_executable( 6TH 6th.c)
add_executable( 7TH 7th.c)
add_executable( 8TH 8th.c)
add_executable( 9TH 9th.c)
add_executable( 11TH 11th.c)
add_executable( 10TH 10th.c)
add_executable( 12TH 12th.c)
add_executable( 13TH 13th.c)
add_executable( 14TH 14th.c)
add_executable( 15TH 15th.c)
add_executable( 16TH 16th.c)
add_executable( 17TH 17th.c)
add_executable( 18TH 18th.c)
add_executable( 19TH 19th.c)
add_executable( 20TH 20th.c)
add_executable( 21TH 21th.c)
add_executable( 22TH 22th.c)
add_executable( 23TH 23th.c)
add_executable( 24TH 24th.c)
add_executable( 25TH 25th.c)
add_executable( 26TH 26th.c)




