cmake_minimum_required(VERSION 3.26)
project(lab_c_programing)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable( 1ST 1st.c)
add_executable(2ND 2nd.c)
add_executable( 3RD 3rd.c)
add_executable( 4TH 4th.c)
add_executable( 5TH 5th.c)
add_executable( 6TH 6th.c)
add_executable( 7TH 7th.c)
add_executable( 8TH 8th.c)
add_executable( 9TH 9th.c)
add_executable( 11TH 11th.c)
add_executable( 10TH 10th.c)

add_executable( 12TH 12th.c)
add_executable( 13TH 13th.c)
add_executable( 14TH 14th.c)
add_executable( 15TH 15th.c)
add_executable( 16TH 16th.c)
add_executable( 17TH 17th.c)
add_executable( 18TH 18th.c)
add_executable( 19TH 19th.c)
add_executable( 20TH 20th.c)
add_executable( 21TH 21th.c)
add_executable( 22TH 22th.c)
add_executable( 23TH 23th.c)
add_executable( 24TH 24th.c)
add_executable( 25TH 25th.c)
add_executable( 26TH 26th.c)
add_executable( 27TH 27th.c)
add_executable( 28TH 28.c)
add_executable( 29TH 29th.c)
add_executable(30TH 30th.c)
add_executable(32TH 32th.c)
add_executable(33TH 33th.c)
add_executable(34TH 34th.c)
add_executable(35TH 35th.c)
add_executable(36TH 36th.c)
add_executable(37TH 37th.c)
add_executable(38TH 38th.c)
add_executable(39TH 39th.c)
add_executable(40TH 40th.c)
add_executable(41TH 41th.c)
add_executable(42TH 42th.c)
add_executable(43TH 43th.c)
add_executable(44TH 44th.c)
add_executable(45TH 45th.c)
add_executable(46TH 46th.c)
add_executable(47TH 47th.c)
add_executable(48TH 48th.c)
add_executable(49TH 49th.c)
add_executable(50TH 50th.c)
add_executable(51TH 51th.c)
add_executable(52TH 52th.c)
add_executable(53 53.c)
add_executable(54TH 54th.c)
add_executable(55TH 55th.c)
add_executable(56 56.c)

